# teachering

./: LICENSE  README.md  pyproject.toml
frontend/attendance-frontend/: package-lock.json  package.json
frontend/attendance-frontend/src/: App.tsx
frontend/attendance-frontend/src/pages/: CheckIn.tsx  Dashboard.tsx  Login.tsx  ManageAttendance.tsx
src/teachering/: app.py  models.py
