[project]
name = "teachering"
version = "0.1.0"
description = "roll call system"
authors = [
    {name = "Drunkwcodes", email = "drunkwcodes@gmail.com"},
]
dependencies = ["Flask>=3.1.0", "Flask-Security>=5.6.0", "Flask-JWT-Extended>=4.7.1", "peewee>=3.17.9", "flask-cors>=5.0.0", "flask-bcrypt>=1.0.1", "flask-caching>=2.3.0", "pyjwt>=2.10.1"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
